pass centerOn true or false

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,4 +6,4 @@
 </p>
 
 <%= react_component 'Map',
-    props: { coordinates: @coordinates} %>
+    props: { coordinates: @coordinates, centerOnUser: true} %>
