--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Places</h1>
+<p id="notice"><%= notice %></p>
 <p>
   You are calling from
   <span id="long"><%= @coordinates.first %></span>,
@@ -7,3 +7,6 @@
 
 <%= react_component 'Map',
     props: { coordinates: @coordinates, centerOnUser: true} %>
+
+<hr>
+<%= render 'form', place: @place %>
